syntax = "proto3";

package protos;

import "sp_pipeline.proto";
import "steps/sp_steps_detective.proto";

option go_package = "github.com/streamdal/streamdal/libs/protos/build/go/protos";
option java_package = "com.streamdal.protos";

// Included in Wasm response; the SDK should use the WASMExitCode to determine
// what to do next - should it execute next step, should it notify or should it
// stop execution/abort the rest of the steps in current or all pipelines.
//
// Example:
//
// a. Wasm func returns WASM_EXIT_CODE_FALSE - read PipelineStep.on_false
// conditions to determine what to do next.
//
// b. Wasm func returns WASM_EXIT_CODE_TRUE - read PipelineStep.on_true
// conditions to determine what to do next.
//
// .. and so on.
// TODO: This might be a dupe - should Wasm use ExecStatus instead of this?
// protolint:disable:next ENUM_FIELD_NAMES_PREFIX
enum WASMExitCode {
  WASM_EXIT_CODE_UNSET = 0;
  WASM_EXIT_CODE_TRUE = 1;
  WASM_EXIT_CODE_FALSE = 2;
  WASM_EXIT_CODE_ERROR = 3;
}

// SDK generates a WASM request and passes this to the WASM func
message WASMRequest {
  // The actual step that the WASM func will operate on. This is the same step
  // that is declared in protos.Pipeline.
  protos.PipelineStep step = 1;

  // Payload data that WASM func will operate on
  bytes input_payload = 2;

  // Potentially filled out result from previous step. If this is first step in
  // the pipeline, it will be empty.
  optional bytes input_step = 3;

  // Potential input from a previous step if `Step.Dynamic == true`
  // This is used for communicating data between steps.
  // For example, when trying to find email addresses in a payload and
  // then passing on the results to a transform step to obfuscate them
  optional InterStepResult inter_step_result = 4;
}

// Returned by all WASM functions
message WASMResponse {
  // Potentially modified input payload. Concept: All WASM funcs accept an
  // input_payload in WASMRequest, WASM func reads input payload, modifies it
  // and writes the modified output to output_payload.
  bytes output_payload = 1;

  // Exit code that the WASM func exited with; more info in WASMExitCode's comment
  WASMExitCode exit_code = 2;

  // Additional info about the reason a specific exit code was returned
  string exit_msg = 3;

  // Potential additional step output - ie. if a WASM func is an HTTPGet,
  // output_step would contain the HTTP response body; if the WASM func is a
  // KVGet, the output_step would be the value of the fetched key.
  optional bytes output_step = 4;

  // If `Step.Dynamic == true`, this field should be filled out by the WASM module
  // This is used for communicating data between steps.
  // For example, when trying to find email addresses in a payload and
  // then passing on the results to a transform step to obfuscate them
  optional InterStepResult inter_step_result = 5;
}

// Intended for communicating wasm results between steps.
// Currently only used for passing results from a Detective Step to a Transform step
message InterStepResult {
  oneof input_from {
    steps.DetectiveStepResult detective_result = 1;
  }
}
